20-12-21 updated readme file